# juicer

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  README  configure.ac  juicer.pc.in
cmake/: FindHTK.cmake  FindLibResample.cmake  FindRtAudio.cmake  FindSPTK.cmake  FindTorch3.cmake  FindTracter.cmake
doc/: Makefile.am  build.doc  index.doc
doc/userman/: do-it  juicer_userman.tex
doc/userman/pics/: README  cdgen.epsi  gen_tool_help  gramgen.epsi  juicer.epsi  juicer_arch.eps  juicer_arch.fig  lexgen.epsi  lna.5  lna.epsi
doc/userman/wsj-pruning-exp/: graphs.gnuplot
doc/userman/wsj-pruning-exp/results/: e.txt  m.txt  p.txt  p200em.txt  p220em.txt  p250e.txt  p250em.txt  p250m.txt
src/: ARPALM.cpp  ARPALM.h  BlockMemPool.cpp  BlockMemPool.h  CMakeLists.txt  DecHypHistPool.cpp  DecHypHistPool.h  DecLexInfo.cpp  DecLexInfo.h  DecPhoneInfo.cpp  DecPhoneInfo.h  DecVocabulary.cpp  DecVocabulary.h  Decoder.h  DecoderBatchTest.cpp  DecoderBatchTest.h  DecoderSingleTest.cpp  DecoderSingleTest.h  DecodingHMM.cpp  DecodingHMM.h  DiskFile.cpp  DiskFile.h  FrontEnd.h  HModels.cpp  HModels.h  HTKFlatModels.cpp  HTKFlatModels.h  HTKFlatModelsThreading.cpp  HTKFlatModelsThreading.h  HTKModels.cpp  HTKModels.h  Histogram.cpp  Histogram.h  LogFile.cpp  LogFile.h  Makefile.am  Models.cpp  Models.h  MonophoneLookup.cpp  MonophoneLookup.h  (+48 more)
